--- a/index.html
+++ b/index.html
@@ -5,35 +5,48 @@
 	<title>Creador de anuncios</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Fredoka+One|Luckiest+Guy|Poppins" rel="stylesheet">
+	<link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
+
 </head>
 <body id="body">
 	
+	<div id="border" class="border">
 	
-	<div>
-		<div> <h1 class="title" id="title">TitleTitle Title</h1> </div>
+		<div id="bgtitlet"> 
+			<h1 class="title" id="title">TitleTitle Title</h1> 
+		</div>
+		<hr id="hr" class="hr">
 		<div id="parrafos" class="parrafos">
 			
 
-		</div>
-	</div>
+    </div>
+	
+    </div>
+    <div id="respaldo" class="respaldo">
 	<div id="divtitle" class="divtitle">
 			<div >
-			<input type="text" id="entrada-titulo" ><button id="btn-titulo">Agregar titulo</button>
+			<input type="text" id="entrada-titulo"  class="ma3 pa2 bg-lightest-blue br3 shadow-5 "><button id="btn-titulo" class="f6 link dim ph3 pv2 mb2 dib white bg-dark-green">Agregar titulo</button>
+			
+			<input type="text"  id="entrada" class="ma3 pa2 bg-lightest-blue br3 shadow-5"> <button id="btn" class="f6 link dim ph3 pv2 mb2 dib white bg-dark-green">Agregar parrafo</button>
+			<input type="text"  id="entradaunica" class="ma3 pa2 bg-lightest-blue br3 shadow-5"> <button id="btnunico" class="f6 link dim ph3 pv2 mb2 dib white bg-dark-green">Agregar parrafo Unico</button>
+			<button id="btnborrar" class="f6 link dim ph3 pv2 mb2 dib white bg-dark-green">Borrar Parrafo</button>
+			
 			</div>
-			<div>
-			<input type="text"  id="entrada"> <button id="btn">Agregar parrafo</button>
-			</div>
+
 			<div>
 				<label>Cambiar el color del titulo</label>
 				<input type="color" id="color">
-			</div>
-			<div>
-					<label>Cambiar el color del fondo</label>
-					<input type="color" id="bgcolor1">
-					<input type="color" id="bgcolor2">
-				</div>
-			<div>
-				<label>Seleccion el color del borde</label>
+				<hr>
+				<label>Cambiar el color del fondo</label>
+				<input type="color" id="bgcolor1">
+				<input type="color" id="bgcolor2">
+				<label>--Color unico</label> <input type="color" name="" id="bgcolor3" class="bgcolor3">
+	            <hr>		
+				<label>Cambiar el color del borde</label>
+				<input type="color" id="bordercolor" class="bordercolor" />
+			
+
+				<label>Colores De Marcas</label>
 				<select id="dropdown">
 					<option value="rgb(249, 159, 62)" >FRIENDLY</option>
 					<option value="rgb(235, 5, 39" >EXCITEMENT</option>
@@ -43,11 +56,12 @@
 					<option value="rgb(233, 205, 46)" >OPTIMISM</option>
 					<option value="rgb(220, 223, 226)" >BALANCE</option>
 				</select>
-				<button id="btn-borde">Cambiar borde</button>
-	
+				<button id="btn-borde">Cambiar borde</button>  
+	                                         
 			</div>
-			<button id="ocultar">Ocultar</button>
+			<button id="ocultar" class="f6 link dim ph3 pv2 mb2 dib white bg-dark-blue">Ocultar</button>
 		</div>
+	</div>
 	<script type="text/javascript" src="js.js"></script>
 </body>
 </html>
