--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="border" class="border">
 	
 		<div id="bgtitlet"> 
-			<h1 class="title" id="title">TitleTitle Title</h1> 
+			<h1 class="title" id="title">Creador de anuncios</h1> 
 		</div>
 		<hr id="hr" class="hr">
 		<div id="parrafos" class="parrafos">
@@ -32,7 +32,7 @@
 			<button id="btnborrar" class="f6 link dim ph3 pv2 mb2 dib white bg-dark-green">Borrar Parrafo</button>
 			
 			</div>
-
+             <hr>
 			<div>
 				<label>Cambiar el color del titulo</label>
 				<input type="color" id="color">
