--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 			</div>
              <hr>
 			<div>
-				<label>Cambiar el color del titulo</label>
+				<label>Cambiar El Color Del Titulo</label>
 				<input type="color" id="color">
 				<hr>
-				<label>Cambiar el color del fondo</label>
+				<label>Cambiar El Color Del Fondo</label>
 				<input type="color" id="bgcolor1">
 				<input type="color" id="bgcolor2">
-				<label>--Color unico</label> <input type="color" name="" id="bgcolor3" class="bgcolor3">
+				<label>--Color Unico</label> <input type="color" name="" id="bgcolor3" class="bgcolor3">
 	            <hr>		
-				<label>Cambiar el color del borde</label>
+				<label>Cambiar El Color Del Borde</label>
 				<input type="color" id="bordercolor" class="bordercolor" />
 			 
 	                                         
